@@ -1681,15 +1681,14 @@ void Score::cmdExchangeVoice(int s, int d)
       int t2 = selection().tickEnd();
 
       Measure* m1 = tick2measure(t1);
-      Measure* m2 = tick2measure(t2);
-printf("exchange voice %d %d, tick %d-%d, measure %p-%p\n", s, d, t1, t2, m1, m2);
+      Measure* m2 = tick2measure(t2);      
+      if (t2 > m2->tick())
+            m2 = 0;
+      
       for (;;) {
             undoExchangeVoice(m1, s, d, selection().staffStart(), selection().staffEnd());
-            MeasureBase* mb = m1->next();
-            while (mb && mb->type() != MEASURE)
-                  mb = mb->next();
-            m1 = static_cast<Measure*>(mb);
-            if (m1 == 0 || (m1 !=0 && m1->tick() > t2))
+            m1 = m1->nextMeasure();
+            if ((m1 == 0) || (m2 && (m1->tick() == m2->tick())))
                   break;
             }
       }
