@@ -1,3 +1,7 @@
+24.nov (la)
+      - fix #8018: Lilypond: Quote marks in lyrics need to be escaped
+      - fix #7892: Exchange voices adds extra rests
+      - fix #7944: Instrument limit
 19.nov (la)
       - fix #7017: Chord names does not support "H" name as chord
 14.nov (la)
